added login endpoints email/phone
